--- a/app/src/main/res/layout/activity_addpdf.xml
+++ b/app/src/main/res/layout/activity_addpdf.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".userDetailsActivity">
+    tools:context=".userDetailsActivity"
+   >
 
     <ScrollView
         android:layout_width="0dp"
@@ -12,7 +13,8 @@
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -35,14 +37,14 @@
                     android:id="@+id/autoCompleteTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Type of illness"
+                    android:hint="Type of Illness"
                     android:padding="14dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <LinearLayout
                 android:id="@+id/chipGroupLayout"
                 android:layout_width="320dp"
-                android:layout_height="80dp"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
                 android:orientation="vertical"
@@ -58,9 +60,7 @@
                     android:layout_height="wrap_content"
                     android:text="All Illness" />
 
-                <ScrollView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+
 
                     <com.google.android.material.chip.ChipGroup
                         android:id="@+id/chipGroup"
@@ -73,7 +73,7 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                     </com.google.android.material.chip.ChipGroup>
-                </ScrollView>
+
             </LinearLayout>
 
 
@@ -93,7 +93,7 @@
                     android:id="@+id/autoCompleteMedicineET"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Type of illness"
+                    android:hint="Type of Medicine"
                     android:padding="14dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -101,7 +101,7 @@
             <LinearLayout
                 android:id="@+id/medicineChipGroupLayout"
                 android:layout_width="320dp"
-                android:layout_height="80dp"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
                 android:orientation="vertical"
@@ -117,9 +117,7 @@
                     android:layout_height="wrap_content"
                     android:text="All Medicine" />
 
-                <ScrollView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+
 
                     <com.google.android.material.chip.ChipGroup
                         android:id="@+id/chipGroupMedicine"
@@ -132,7 +130,7 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                     </com.google.android.material.chip.ChipGroup>
-                </ScrollView>
+
             </LinearLayout>
 
 
@@ -196,7 +194,7 @@
                 style="@style/nightForIcon"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="88dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
