--- a/app/src/main/res/layout/activity_viewillness.xml
+++ b/app/src/main/res/layout/activity_viewillness.xml
@@ -55,20 +55,19 @@
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         app:layout_constraintTop_toBottomOf="@+id/searchBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/guideline" /> <!-- Set bottom constraint to the guideline -->
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        android:padding="24dp"
+        /> <!-- Set bottom constraint to the guideline -->
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.9" /> <!-- Adjust the percentage as needed -->
+        app:layout_constraintGuide_percent="0.93" /> <!-- Adjust the percentage as needed -->
 
     <include
         android:id="@+id/footer"
