--- a/app/src/main/res/layout/illness_card.xml
+++ b/app/src/main/res/layout/illness_card.xml
@@ -1,11 +1,8 @@
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
-    app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
 
     <RelativeLayout
@@ -19,8 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="Name of illness: "
-            android:textSize="14sp"
-            />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/description"
@@ -31,27 +27,25 @@
             android:text="Description: "
             android:textSize="14sp" />
 
-
-
         <TextView
             android:id="@+id/actionTaken"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/horizontalLine"
+            android:layout_below="@id/description"
             android:layout_marginStart="16dp"
             android:text="Action:"
             android:textSize="14sp" />
 
-
-
         <View
-            android:id="@+id/horizontalLine"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="1dp"
-            android:layout_below="@id/description"
-            android:layout_marginStart="16dp"
-            android:background="@android:color/black" />
-
-
+            android:layout_below="@+id/actionTaken"
+            android:layout_gravity="bottom|center"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="15dp"
+           style="@style/reverseColor" />
     </RelativeLayout>
+
+
 </androidx.cardview.widget.CardView>
