--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,11 +15,14 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/teal_700</item>
 
-
         <!-- Customize your theme here. -->
     </style>
     <style name="nightForIcon" >
         <item name="android:tint">@color/white</item>
+    </style>
+
+    <style name="reverseColor" >
+        <item name="android:background">#D6D6D6</item>
     </style>
     <style name="LoginTextInputOuterFieldStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_width">match_parent</item>
