--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,12 @@
 
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="reverseColor" >
+        <item name="android:background">#D6D6D6</item>
+
+    </style>
+
     <style name="LoginTextInputOuterFieldStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
